# punchi-dock-remastered

./: .gitignore  .kpackageignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Messages.sh  NOTICE  README.es.md  README.md  fix_imports.py  messages.mo  metadata.json  probar-plasmoid.sh
.agents/: AGENTS.md
.agents/skills 2/accessibility/: SKILL.md
.agents/skills 2/animations/: SKILL.md
.agents/skills 2/architecture/: SKILL.md
.agents/skills 2/controllers/: SKILL.md
.agents/skills 2/fedora/: SKILL.md
.agents/skills 2/git/: SKILL.md
.agents/skills 2/git-maintenance/: SKILL.md
.agents/skills 2/icons/: SKILL.md
.agents/skills 2/javascript/: SKILL.md
.agents/skills 2/js-plasma-backend/: SKILL.md
.agents/skills 2/kde-plasma6/: SKILL.md
.agents/skills 2/kde-sdk-reference/: SKILL.md
.agents/skills 2/kde-upstream-sync/: SKILL.md
.agents/skills 2/ki18n-localization/: SKILL.md
.agents/skills 2/kirigami/: SKILL.md
.agents/skills 2/localization/: SKILL.md
.agents/skills 2/logging/: SKILL.md
.agents/skills 2/models/: SKILL.md
.agents/skills 2/packaging/: SKILL.md
.agents/skills 2/plasmoid-packaging/: SKILL.md
.agents/skills 2/qml/: SKILL.md
.agents/skills 2/qml-ui-creation/: SKILL.md
.agents/skills 2/refactoring/: SKILL.md
.agents/skills 2/release/: SKILL.md
.agents/skills 2/sdk-reference/: SKILL.md
.agents/skills 2/security/: SKILL.md
.agents/skills 2/services/: SKILL.md
.agents/skills 2/taskmanager-api/: SKILL.md
bitacora/: 2026-07-12-resumen-de-sesion.md  2026-07-16-resumen-sesion.md  adaptador-cpp-kservice-kio.md  ajuste-animaciones-borde-panel-2026-07-11.md  auditoria-general-2026-07-10.md  auditoria-shell-debt-2026-07-11.md  cierre-sesion-miniaturas-2026-07-11.md  correccion-anclaje-popups-borde-panel-2026-07-11.md  correccion-discovery-konsole-falso-positivo-2026-07-11.md  correccion-empaquetado-y-validacion-miniaturas-2026-07-11.md  correccion-menu-papelera.md  correccion-miniaturas-hover-2026-07-11.md  correccion-papelera-nativa-2026-07-11.md  correccion-tareas-portables-panel-autoocultable-2026-07-16.md  correccion-tooltip-global-panel-2026-07-11.md  correcciones-fase1-export-config-2026-07-10.md  cuarta-revision-panel-tareas-y-separador-2026-07-11.md  debounce-tareas-dinamicas-2026-07-11.md  diagnostico-runtime-miniaturas-2026-07-11.md  fase-0-instrucciones-skills.md  fase-1-reglas-globales.md  fase-3-consolidacion-skills.md  fase4c-geometria-panel-y-papelera-2026-07-11.md  hover-popup-ventanas-estilo-proyecto-madre-2026-07-11.md  hover-preview-ventanas-2026-07-11.md  lazy-loading-miniaturas-pipewire-2026-07-11.md  migracion-fase3-helpers-2026-07-10.md  migracion-ki18n-fase2-2026-07-10.md  migracion-lanzamiento-apps-nativo-2026-07-11.md  popup-ventanas-miniaturas-base-2026-07-11.md  popups-runtime-y-notas-2026-07-11.md  preview-hover-unificado-2026-07-11.md  progreso-contextual-papelera.md  progreso-escritorio-virtual.md  progreso-fase1-2-3.md  quinta-revision-personalizacion-base-2026-07-11.md  remediacion-auditoria-agentes-skills.md  segunda-revision-config-hover-notas-2026-07-11.md  simplificacion-selector-manual-iconos-2026-07-11.md  temas-json-externos-fase1-2026-07-16.md  (+2 more)
contents/code/: defaultItems.js  logic.js
contents/config/: config.qml  main.xml
contents/ui/: main.qml
docs/Post KDE/: post-kde-store-0.8.8-es.md  post-kde-store-0.8.8.md
docs/guias-usuario/: compilacion-adaptador-cpp.md  errores.md
docs/nuevas-modificaciones/: modificaciones.md  modificaciones_2026-07-16.md  plantilla-modificacion.md
docs/plandeaccion/: fase-0-inventario.md  fase-1-reglas-globales.md  fase-3-consolidacion-skills.md  textos.md
docs/revisiones/: auditoria-general-2026-07-10.md  auditoria-general-2026-07-11.md  auditoria-shell-debt-2026-07-11.md  fase-2-servicio-runtime-2026-07-11.md  inicio-10-07-26.md  plantilla-revision.md  revision-importacion-biblioteca-temas-2026-07-16.md  revision-tareas-portables-panel-autoocultable-2026-07-16.md  revision-temas-eq-panel-2026-07-16.md  revision_11-07-26-2.md  revision_11-07-26.md  revision_12-07-26-2.md  revision_12-07-26.md
po/: README.es.md  README.md  es.po  plasma_applet_org.kde.plasma.punchi-dock-remastered.pot
scratch/: test_popup.qml
scripts/: README.es.md  README.md  build-debian-package.sh  build-fedora-package.sh  build-kubuntu-package.sh  check-build-environment.sh  empaquetar-plasmoid.sh  probar-plasmoid.sh  qmllint-baseline-debian.env  qmllint-baseline-fedora.env  qmllint-baseline.env  setup-debian13.sh  setup-debian14-testing.sh  setup-fedora.sh  setup-kubuntu.sh  update-translations.sh  validar-empaquetado-limpio.sh  watch-plasmoidviewer.sh
scripts/Kubuntu/: setup_kubuntu_build.py
scripts/dev/: update-translations.sh  validar-empaquetado-limpio.sh  watch-plasmoidviewer.sh
scripts/distro/: debian13-package.sh  debian13-setup.sh  debian14-testing-package.sh  debian14-testing-setup.sh  fedora-package.sh  fedora-setup.sh  kubuntu-package.sh  kubuntu-setup.sh
scripts/lib/: install-local-test.sh  local-package-install.sh  package-plasmoid.sh  plasma-version.sh  qmllint-baseline.sh  setup-logging.sh
src/: CMakeLists.txt  audiospectrumcontroller.cpp  audiospectrumcontroller.h  commandclassification.cpp  commandclassification.h  dockruntimeservice.cpp  dockruntimeservice.h  dockthemerepository.cpp  dockthemerepository.h  dockthemevalidator.cpp  dockthemevalidator.h  mediaartworkresolver.cpp  mediaartworkresolver.h  mpriscontroller.cpp  mpriscontroller.h  pipewireaudiobackend.cpp  pipewireaudiobackend.h  spectrumanalyzer.cpp  spectrumanalyzer.h  systemdiscovery.cpp  systemdiscovery.h  themeintegration.cpp  themeintegration.h  trashintegration.cpp  trashintegration.h
tests/: CMakeLists.txt  commandclassification_test.cpp  debian_dependency_detection_test.sh  dockthemerepository_test.cpp  dockthemevalidator_test.cpp  kubuntu_version_detection_test.py  local_package_install_test.sh  mediaartworkresolver_test.cpp  pipewirebackend_probe.cpp  qmllint_baseline_path_test.sh  setup_logging_test.sh  spectrumanalyzer_test.cpp  translation_catalog_test.sh
(+116 files in other folders)
